# clip-vault

./: CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/clip-vault-cli/: Cargo.toml
crates/clip-vault-cli/src/: main.rs
crates/clip-vault-core/: Cargo.toml
crates/clip-vault-core/src/: crypto.rs  entry.rs  error.rs  lib.rs  storage.rs  vault.rs
crates/clip-vault-daemon/: Cargo.toml
crates/clip-vault-daemon/src/: main.rs
crates/clip-vault-proto/: Cargo.toml
crates/clip-vault-proto/src/: lib.rs
crates/clip-vault-tui/: Cargo.toml
crates/clip-vault-tui/src/: main.rs
