[package]
name = "clip-vault-core"
version.workspace = true
authors.workspace = true
description = "Core library: encrypted storage, AES-256-GCM, clipboard entry types."
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

serde.workspace = true
uuid.workspace = true
chrono.workspace = true
ciborium = "0.2"
rusqlite = "0.40.0"

[lints]
workspace = true

