[package]
name = "clip-vault-core"
version.workspace = true
authors.workspace = true
description = "Core library: encrypted storage, AES-256-GCM, clipboard entry types."
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

serde.workspace = true
uuid.workspace = true
chrono.workspace = true
ciborium = "0.2"
rusqlite = "0.40.0"
argon2 = { version = "0.5.3", features = ["std"] }
secrecy = "0.10.3"
serde_with = "3.21.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
zeroize = "1.9.0"
aes-gcm = { version = "0.10.0", features = ["zeroize"]}

[dev-dependencies]
proptest = "1.11.0"

[lints]
workspace = true

