[package]
name = "clip-vault-tui"
version.workspace = true
authors.workspace = true
description = "Terminal UI picker for ClipVault."
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
